# valorant-web-radar

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
canvas/: Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
canvas/src/: lib.rs
canvas/src/components/: canvas.rs  dead_players.rs  element.rs  elements.rs  game_data.rs  game_status.rs  mod.rs  open_websocket.rs  player.rs  player_data.rs  player_icons.rs  player_table.rs  round_display_config.rs  spike_status.rs  ui_element.rs  websocket.rs
canvas/src/css/: style.css
frontend/: Cargo.toml  index.html  package-lock.json  package.json
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
test-client/: Cargo.toml
test-client/src/: main.rs
