[package]
name = "canvas"
version = "0.2.5"
authors = ["Henry Nguyen"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.105"
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'HtmlButtonElement',
  'HtmlSelectElement',
  'HtmlOptionElement',
  'HtmlSpanElement',
  'HtmlLabelElement',
  'HtmlInputElement',
  'HtmlCollection',
  'HtmlDivElement',
  'CssStyleDeclaration',
  'Window',
  'ErrorEvent',
  'MessageEvent',
  'WebSocket',
]
