[package]
name = "server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
tokio-tungstenite = "*"
futures-util = "0.3.28"
futures-channel = "0.3.28"
local-ip-address = "0.5.5"
